In IE7, in the banner, fix the .action-motivation text; baseline align with the green button text.

--- a/app/assets/stylesheets/sencha_base/style.scss
+++ b/app/assets/stylesheets/sencha_base/style.scss
@@ -1112,6 +1112,13 @@ background-position: 0 -729px;
   }
 }
 
+// Pull up the action motivation text in IE7, to baseline align with the button 
+// text.
+.lt-ie8 .action-motivation {
+  position: relative;
+  top: -9px;
+}
+
 // Select drop down for selecting location.
 .select-location {
   display: inline-block;
